--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "devDependencies": {
     "@types/express": "^5.0.1",
     "@types/node": "^22.10.5",
+    "drizzle-kit": "^0.31.7",
     "typescript": "^5.7.2"
   },
   "dependencies": {
-    "express": "^5.1.0"
+    "drizzle-orm": "^0.44.7",
+    "express": "^5.1.0",
+    "postgres": "^3.4.7"
   }
 }
-
