--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
-DB_URL="postgres://postgres:postgres@localhost:5433/chirpy?sslmode=disable"
+PLATFORM=dev
+
+DB_URL="postgres://postgres:postgres@localhost:5432/chirpy?sslmode=disable"
+PORT=8080
