--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "typescript": "^5.7.2"
   },
   "dependencies": {
+    "argon2": "^0.44.0",
     "drizzle-orm": "^0.44.7",
     "express": "^5.1.0",
     "postgres": "^3.4.7"
